# sketches-rust

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  serde.rs  sketch.rs
src/index_mapping/: cubically_interpolated.rs  impls.rs  logarithmic.rs  mod.rs
src/input/: default.rs  impls.rs  mod.rs
src/output/: default.rs  impls.rs  mod.rs
src/store/: collapsing_highest.rs  collapsing_lowest.rs  impls.rs  mod.rs  unbounded.rs
src/util/: mod.rs  serde.rs
tests/: test_sketch.rs
