[package]
name = "sketches-rust"
version = "0.1.5"
authors = ["loyispa <litiegen456250@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/loyispa/sketches-rust"
homepage = "https://github.com/loyispa/sketches-rust"
description = "Rust implementation of DDSketch."
exclude = [".gitignore"]

[dependencies]